--- a/chatgpt.html
+++ b/chatgpt.html
@@ -4,143 +4,318 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chandan & Anjali - Wedding Invitation</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@300;400&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Great Vibes', cursive, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Cormorant Garamond', serif;
       margin: 0;
       padding: 0;
-      background: #fff7f5;
+      background: linear-gradient(135deg, #f9f1f0 0%, #ffeaea 100%);
       color: #4a2c2a;
       overflow-x: hidden;
+      line-height: 1.6;
     }
 
     .container {
-      max-width: 900px;
+      max-width: 850px;
       margin: 40px auto;
       background: white;
-      padding: 40px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-      border-radius: 15px;
+      padding: 50px;
+      box-shadow: 0 10px 30px rgba(183, 110, 121, 0.15);
+      border-radius: 12px;
       position: relative;
-      background: linear-gradient(135deg, #fff 0%, #fdedec 100%);
+      background: linear-gradient(135deg, #fff 0%, #fdf6f5 100%);
+      border: 1px solid rgba(183, 110, 121, 0.2);
     }
 
     .header {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
+      position: relative;
+    }
+
+    .header:before, .header:after {
+      content: "";
+      position: absolute;
+      width: 150px;
+      height: 2px;
+      background: linear-gradient(90deg, transparent, #d4a5a5, transparent);
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .header:before {
+      top: -15px;
+    }
+
+    .header:after {
+      bottom: -15px;
+    }
+
+    .floral-divider {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 30px 0;
+    }
+
+    .floral-divider:before, .floral-divider:after {
+      content: "";
+      flex-grow: 1;
+      height: 1px;
+      background: linear-gradient(90deg, transparent, #d4a5a5, transparent);
+      margin: 0 15px;
+    }
+
+    .floral-icon {
+      width: 40px;
+      height: 40px;
+      opacity: 0.7;
     }
 
     .couple-image {
       width: 100%;
       max-width: 400px;
       height: auto;
-      margin: 20px auto;
+      margin: 30px auto;
       border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+      border: 3px solid white;
+      transition: transform 0.3s ease;
+    }
+
+    .couple-image:hover {
+      transform: scale(1.02);
     }
 
     .names {
-      font-size: 60px;
+      font-family: 'Great Vibes', cursive;
+      font-size: 68px;
       font-weight: 400;
       color: #b76e79;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
       margin: 0;
+      line-height: 1.2;
     }
 
     .and {
-      font-size: 36px;
+      font-family: 'Great Vibes', cursive;
+      font-size: 42px;
       color: #d4a5a5;
-      margin: 10px 0;
+      margin: 5px 0;
     }
 
     .subtitle {
-      font-size: 24px;
+      font-family: 'Playfair Display', serif;
+      font-size: 20px;
       color: #6b4e4d;
       font-style: italic;
+      letter-spacing: 1px;
+      margin-top: 15px;
+    }
+
+    .date-banner {
+      background: linear-gradient(90deg, #f9f1f0, #ffeaea, #f9f1f0);
+      padding: 12px;
+      margin: 40px auto;
+      text-align: center;
+      font-family: 'Playfair Display', serif;
+      font-size: 20px;
+      color: #b76e79;
+      font-weight: 700;
+      letter-spacing: 2px;
+      border-radius: 5px;
+      max-width: 80%;
     }
 
     .section {
-      margin-top: 30px;
+      margin-top: 40px;
       text-align: center;
+      padding: 0 20px;
     }
 
     .section h2 {
-      font-size: 28px;
+      font-family: 'Great Vibes', cursive;
+      font-size: 38px;
       color: #b76e79;
-      border-bottom: 2px solid #d4a5a5;
+      font-weight: normal;
+      margin-bottom: 25px;
+      position: relative;
       display: inline-block;
-      padding-bottom: 5px;
-      margin-bottom: 20px;
+    }
+
+    .section h2:after {
+      content: "";
+      position: absolute;
+      height: 2px;
+      width: 70%;
+      background: linear-gradient(90deg, transparent, #d4a5a5, transparent);
+      bottom: -8px;
+      left: 15%;
     }
 
     .details {
-      font-size: 18px;
-      line-height: 1.6;
+      font-size: 20px;
+      line-height: 1.7;
       color: #4a2c2a;
     }
 
     .details b {
       color: #b76e79;
+      font-weight: 700;
     }
 
     .map-link {
       color: #b76e79;
       text-decoration: none;
       font-weight: bold;
+      transition: all 0.3s ease;
+      border-bottom: 1px dotted #b76e79;
+      padding-bottom: 2px;
     }
 
     .map-link:hover {
-      text-decoration: underline;
+      color: #d4a5a5;
+      border-bottom: 1px solid #d4a5a5;
     }
 
     .rsvp-button {
       display: inline-block;
-      padding: 12px 24px;
-      background-color: #b76e79;
+      padding: 14px 30px;
+      background: linear-gradient(135deg, #b76e79 0%, #d4a5a5 100%);
       color: white;
       border: none;
-      border-radius: 25px;
+      border-radius: 50px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: bold;
-      margin-top: 20px;
+      margin-top: 25px;
       text-decoration: none;
+      box-shadow: 0 4px 10px rgba(183, 110, 121, 0.3);
+      transition: all 0.3s ease;
+      letter-spacing: 1px;
+      font-family: 'Playfair Display', serif;
+    }
+
+    .rsvp-button:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 7px 15px rgba(183, 110, 121, 0.4);
+      background: linear-gradient(135deg, #c97b86 0%, #deb6b6 100%);
+    }
+
+    .rsvp-button:active {
+      transform: translateY(0);
     }
 
     .quote {
+      font-family: 'Playfair Display', serif;
       font-style: italic;
-      font-size: 20px;
+      font-size: 22px;
       color: #6b4e4d;
-      background: #fdedec;
-      padding: 15px;
+      background: rgba(253, 237, 236, 0.7);
+      padding: 25px 30px;
       border-left: 4px solid #b76e79;
-      margin: 20px 0;
+      margin: 30px 0;
       border-radius: 5px;
+      text-align: center;
+      position: relative;
+      line-height: 1.8;
+    }
+
+    .quote:before, .quote:after {
+      content: """;
+      font-size: 60px;
+      position: absolute;
+      color: rgba(183, 110, 121, 0.2);
+      font-family: serif;
+    }
+
+    .quote:before {
+      top: -10px;
+      left: 10px;
+    }
+
+    .quote:after {
+      content: """;
+      bottom: -35px;
+      right: 10px;
     }
 
     .decor {
       position: absolute;
-      opacity: 0.1;
+      opacity: 0.15;
       pointer-events: none;
+      z-index: 0;
     }
 
     .decor-top-left {
-      top: 10px;
-      left: 10px;
-      width: 100px;
+      top: 20px;
+      left: 20px;
+      width: 120px;
       transform: rotate(45deg);
     }
 
     .decor-bottom-right {
-      bottom: 10px;
-      right: 10px;
-      width: 100px;
+      bottom: 20px;
+      right: 20px;
+      width: 120px;
       transform: rotate(-45deg);
+    }
+
+    .corner-decoration {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      opacity: 0.15;
+      pointer-events: none;
+    }
+
+    .corner-top-left {
+      top: 0;
+      left: 0;
+      border-top: 3px solid #b76e79;
+      border-left: 3px solid #b76e79;
+      border-top-left-radius: 10px;
+    }
+
+    .corner-top-right {
+      top: 0;
+      right: 0;
+      border-top: 3px solid #b76e79;
+      border-right: 3px solid #b76e79;
+      border-top-right-radius: 10px;
+    }
+
+    .corner-bottom-left {
+      bottom: 0;
+      left: 0;
+      border-bottom: 3px solid #b76e79;
+      border-left: 3px solid #b76e79;
+      border-bottom-left-radius: 10px;
+    }
+
+    .corner-bottom-right {
+      bottom: 0;
+      right: 0;
+      border-bottom: 3px solid #b76e79;
+      border-right: 3px solid #b76e79;
+      border-bottom-right-radius: 10px;
+    }
+
+    .footer {
+      text-align: center;
+      margin-top: 50px;
+      font-style: italic;
+      font-size: 16px;
+      color: #6b4e4d;
     }
 
     @media print {
       .rsvp-button {
-        display: none;
+        background-color: #b76e79 !important;
+        color: white !important;
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
       }
 
       body {
@@ -152,24 +327,20 @@
         margin: 0;
         padding: 20px;
       }
-
-      .decor {
-        display: none;
-      }
     }
 
     @media (max-width: 600px) {
       .container {
         margin: 20px;
-        padding: 20px;
+        padding: 25px;
       }
 
       .names {
-        font-size: 40px;
+        font-size: 46px;
       }
 
       .and {
-        font-size: 24px;
+        font-size: 30px;
       }
 
       .subtitle {
@@ -177,45 +348,85 @@
       }
 
       .section h2 {
-        font-size: 22px;
+        font-size: 32px;
       }
 
       .details {
-        font-size: 16px;
+        font-size: 18px;
       }
 
       .couple-image {
         max-width: 300px;
       }
+
+      .date-banner {
+        font-size: 16px;
+        max-width: 100%;
+      }
+
+      .corner-decoration {
+        width: 60px;
+        height: 60px;
+      }
     }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
-    <img src="https://img.icons8.com/fluency/48/000000/floral-heart.png" class="decor decor-top-left" alt="decor">
-    <img src="https://img.icons8.com/fluency/48/000000/floral-heart.png" class="decor decor-bottom-right" alt="decor">
+    <div class="corner-decoration corner-top-left"></div>
+    <div class="corner-decoration corner-top-right"></div>
+    <div class="corner-decoration corner-bottom-left"></div>
+    <div class="corner-decoration corner-bottom-right"></div>
+    
+    <img src="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.2/collection/components/icon/svg/floral.svg" class="decor decor-top-left" alt="floral decoration">
+    <img src="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.2/collection/components/icon/svg/floral.svg" class="decor decor-bottom-right" alt="floral decoration">
 
     <div class="header">
       <h1 class="names">Chandan</h1>
       <div class="and">&</div>
       <h1 class="names">Anjali</h1>
-      <div class="subtitle">request the honor of your presence at their wedding</div>
-      <!-- Placeholder Ghibli-style couple image -->
-      <img src="https://i.imgur.com/5z5qX4v.jpg" class="couple-image" alt="Chandan and Anjali">
+      <div class="subtitle">Together with their families request the honor of your presence as they begin their new life together</div>
     </div>
 
-    <div class="quote">"Two souls, one heart, united forever in love."</div>
+    <!-- Placeholder couple image -->
+    <div style="text-align: center;">
+      <img src="/api/placeholder/400/300" class="couple-image" alt="Chandan and Anjali">
+    </div>
+
+    <div class="floral-divider">
+      <img src="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.2/collection/components/icon/svg/heart.svg" class="floral-icon" alt="heart">
+    </div>
+
+    <div class="quote">"Two souls with but a single thought, two hearts that beat as one."</div>
+
+    <div class="date-banner">JUNE 5, 2025</div>
 
     <div class="section">
-      <h2>Ceremony Details</h2>
+      <h2>Ceremony</h2>
       <div class="details">
-        <p><b>Date:</b> June 5, 2025</p>
-        <p><b>Time:</b> 6:00 PM</p>
-        <p><b>Venue:</b> Mahavir House, Mahavir Nagar</p>
+        <p><b>Date:</b> Thursday, June 5, 2025</p>
+        <p><b>Time:</b> Six o'clock in the evening</p>
+        <p><b>Venue:</b> Mahavir House</p>
         <p><b>Address:</b> Mahavir Nagar, Gaya, India</p>
-        <p><a href="https://maps.google.com" target="_blank" class="map-link">View Map</a></p>
+        <p><a href="https://maps.google.com" target="_blank" class="map-link">View Location</a></p>
       </div>
+    </div>
+
+    <div class="floral-divider">
+      <img src="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.2/collection/components/icon/svg/flower.svg" class="floral-icon" alt="flower">
+    </div>
+
+    <div class="section">
+      <h2>Reception</h2>
+      <div class="details">
+        <p><b>Time:</b> Eight o'clock in the evening</p>
+        <p><b>Venue:</b> Mahavir House Garden</p>
+        <p>Dinner and dancing to follow</p>
+      </div>
+    </div>
+
+    <div class="floral-divider">
+      <img src="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.2/collection/components/icon/svg/heart.svg" class="floral-icon" alt="heart">
     </div>
 
     <div class="section">
@@ -224,6 +435,10 @@
         <p>Kindly respond by May 20, 2025</p>
         <a href="mailto:chandan.anjali.wedding@example.com" class="rsvp-button">RSVP Here</a>
       </div>
+    </div>
+
+    <div class="footer">
+      <p>We look forward to celebrating with you!</p>
     </div>
   </div>
 </body>
