--- a/chatgpt.html
+++ b/chatgpt.html
@@ -6,57 +6,69 @@
   <title>Chandan & Anjali - Wedding Invitation</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@300;400&display=swap" rel="stylesheet">
   <style>
+    @page {
+      size: A4;
+      margin: 0;
+    }
+
     body {
       font-family: 'Cormorant Garamond', serif;
       margin: 0;
       padding: 0;
       background: linear-gradient(135deg, #f9f1f0 0%, #ffeaea 100%);
       color: #4a2c2a;
-      overflow-x: hidden;
       line-height: 1.6;
+      width: 210mm;
+      height: 297mm;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .container {
-      max-width: 850px;
-      margin: 40px auto;
+      max-width: 190mm;
+      width: 100%;
+      height: 277mm;
+      margin: 10mm;
       background: white;
-      padding: 50px;
+      padding: 10mm;
       box-shadow: 0 10px 30px rgba(183, 110, 121, 0.15);
       border-radius: 12px;
       position: relative;
       background: linear-gradient(135deg, #fff 0%, #fdf6f5 100%);
       border: 1px solid rgba(183, 110, 121, 0.2);
+      overflow: hidden;
     }
 
     .header {
       text-align: center;
-      margin-bottom: 40px;
+      margin-bottom: 15px;
       position: relative;
     }
 
     .header:before, .header:after {
       content: "";
       position: absolute;
-      width: 150px;
-      height: 2px;
+      width: 100px;
+      height: 1px;
       background: linear-gradient(90deg, transparent, #d4a5a5, transparent);
       left: 50%;
       transform: translateX(-50%);
     }
 
     .header:before {
-      top: -15px;
+      top: -10px;
     }
 
     .header:after {
-      bottom: -15px;
+      bottom: -10px;
     }
 
     .floral-divider {
       display: flex;
       align-items: center;
       justify-content: center;
-      margin: 30px 0;
+      margin: 15px 0;
     }
 
     .floral-divider:before, .floral-divider:after {
@@ -64,23 +76,23 @@
       flex-grow: 1;
       height: 1px;
       background: linear-gradient(90deg, transparent, #d4a5a5, transparent);
-      margin: 0 15px;
+      margin: 0 10px;
     }
 
     .floral-icon {
-      width: 40px;
-      height: 40px;
+      width: 30px;
+      height: 30px;
       opacity: 0.7;
     }
 
     .couple-image {
       width: 100%;
-      max-width: 400px;
+      max-width: 150mm;
       height: auto;
-      margin: 30px auto;
-      border-radius: 10px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-      border: 3px solid white;
+      margin: 15px auto;
+      border-radius: 8px;
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+      border: 2px solid white;
       transition: transform 0.3s ease;
     }
 
@@ -88,58 +100,74 @@
       transform: scale(1.02);
     }
 
+    .cultural-image {
+      width: 100%;
+      max-width: 80mm;
+      height: auto;
+      margin: 10px auto;
+      border-radius: 8px;
+      border: 2px solid white;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .image-container {
+      display: flex;
+      justify-content: space-between;
+      margin: 15px 0;
+    }
+
     .names {
       font-family: 'Great Vibes', cursive;
-      font-size: 68px;
+      font-size: 48px;
       font-weight: 400;
       color: #b76e79;
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
       margin: 0;
       line-height: 1.2;
     }
 
     .and {
       font-family: 'Great Vibes', cursive;
-      font-size: 42px;
+      font-size: 32px;
       color: #d4a5a5;
       margin: 5px 0;
     }
 
     .subtitle {
       font-family: 'Playfair Display', serif;
-      font-size: 20px;
+      font-size: 16px;
       color: #6b4e4d;
       font-style: italic;
       letter-spacing: 1px;
-      margin-top: 15px;
+      margin-top: 10px;
     }
 
     .date-banner {
       background: linear-gradient(90deg, #f9f1f0, #ffeaea, #f9f1f0);
-      padding: 12px;
-      margin: 40px auto;
+      padding: 8px;
+      margin: 20px auto;
       text-align: center;
       font-family: 'Playfair Display', serif;
-      font-size: 20px;
+      font-size: 16px;
       color: #b76e79;
       font-weight: 700;
-      letter-spacing: 2px;
+      letter-spacing: 1px;
       border-radius: 5px;
       max-width: 80%;
     }
 
     .section {
-      margin-top: 40px;
+      margin-top: 20px;
       text-align: center;
-      padding: 0 20px;
+      padding: 0 10px;
     }
 
     .section h2 {
       font-family: 'Great Vibes', cursive;
-      font-size: 38px;
+      font-size: 28px;
       color: #b76e79;
       font-weight: normal;
-      margin-bottom: 25px;
+      margin-bottom: 15px;
       position: relative;
       display: inline-block;
     }
@@ -147,16 +175,16 @@
     .section h2:after {
       content: "";
       position: absolute;
-      height: 2px;
+      height: 1px;
       width: 70%;
       background: linear-gradient(90deg, transparent, #d4a5a5, transparent);
-      bottom: -8px;
+      bottom: -5px;
       left: 15%;
     }
 
     .details {
-      font-size: 20px;
-      line-height: 1.7;
+      font-size: 14px;
+      line-height: 1.5;
       color: #4a2c2a;
     }
 
@@ -169,7 +197,6 @@
       color: #b76e79;
       text-decoration: none;
       font-weight: bold;
-      transition: all 0.3s ease;
       border-bottom: 1px dotted #b76e79;
       padding-bottom: 2px;
     }
@@ -181,25 +208,25 @@
 
     .rsvp-button {
       display: inline-block;
-      padding: 14px 30px;
+      padding: 10px 20px;
       background: linear-gradient(135deg, #b76e79 0%, #d4a5a5 100%);
       color: white;
       border: none;
-      border-radius: 50px;
+      border-radius: 25px;
       cursor: pointer;
-      font-size: 18px;
+      font-size: 14px;
       font-weight: bold;
-      margin-top: 25px;
+      margin-top: 15px;
       text-decoration: none;
-      box-shadow: 0 4px 10px rgba(183, 110, 121, 0.3);
+      box-shadow: 0 3px 8px rgba(183, 110, 121, 0.3);
       transition: all 0.3s ease;
       letter-spacing: 1px;
       font-family: 'Playfair Display', serif;
     }
 
     .rsvp-button:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 7px 15px rgba(183, 110, 121, 0.4);
+      transform: translateY(-2px);
+      box-shadow: 0 5px 12px rgba(183, 110, 121, 0.4);
       background: linear-gradient(135deg, #c97b86 0%, #deb6b6 100%);
     }
 
@@ -210,35 +237,35 @@
     .quote {
       font-family: 'Playfair Display', serif;
       font-style: italic;
-      font-size: 22px;
+      font-size: 16px;
       color: #6b4e4d;
       background: rgba(253, 237, 236, 0.7);
-      padding: 25px 30px;
-      border-left: 4px solid #b76e79;
-      margin: 30px 0;
+      padding: 15px 20px;
+      border-left: 3px solid #b76e79;
+      margin: 15px 0;
       border-radius: 5px;
       text-align: center;
       position: relative;
-      line-height: 1.8;
+      line-height: 1.6;
     }
 
     .quote:before, .quote:after {
       content: """;
-      font-size: 60px;
+      font-size: 40px;
       position: absolute;
       color: rgba(183, 110, 121, 0.2);
       font-family: serif;
     }
 
     .quote:before {
-      top: -10px;
-      left: 10px;
+      top: -5px;
+      left: 5px;
     }
 
     .quote:after {
       content: """;
-      bottom: -35px;
-      right: 10px;
+      bottom: -25px;
+      right: 5px;
     }
 
     .decor {
@@ -249,23 +276,23 @@
     }
 
     .decor-top-left {
-      top: 20px;
-      left: 20px;
-      width: 120px;
+      top: 10px;
+      left: 10px;
+      width: 80px;
       transform: rotate(45deg);
     }
 
     .decor-bottom-right {
-      bottom: 20px;
-      right: 20px;
-      width: 120px;
+      bottom: 10px;
+      right: 10px;
+      width: 80px;
       transform: rotate(-45deg);
     }
 
     .corner-decoration {
       position: absolute;
-      width: 100px;
-      height: 100px;
+      width: 80px;
+      height: 80px;
       opacity: 0.15;
       pointer-events: none;
     }
@@ -273,100 +300,117 @@
     .corner-top-left {
       top: 0;
       left: 0;
-      border-top: 3px solid #b76e79;
-      border-left: 3px solid #b76e79;
-      border-top-left-radius: 10px;
+      border-top: 2px solid #b76e79;
+      border-left: 2px solid #b76e79;
+      border-top-left-radius: 8px;
     }
 
     .corner-top-right {
       top: 0;
       right: 0;
-      border-top: 3px solid #b76e79;
-      border-right: 3px solid #b76e79;
-      border-top-right-radius: 10px;
+      border-top: 2px solid #b76e79;
+      border-right: 2px solid #b76e79;
+      border-top-right-radius: 8px;
     }
 
     .corner-bottom-left {
       bottom: 0;
       left: 0;
-      border-bottom: 3px solid #b76e79;
-      border-left: 3px solid #b76e79;
-      border-bottom-left-radius: 10px;
+      border-bottom: 2px solid #b76e79;
+      border-left: 2px solid #b76e79;
+      border-bottom-left-radius: 8px;
     }
 
     .corner-bottom-right {
       bottom: 0;
       right: 0;
-      border-bottom: 3px solid #b76e79;
-      border-right: 3px solid #b76e79;
-      border-bottom-right-radius: 10px;
+      border-bottom: 2px solid #b76e79;
+      border-right: 2px solid #b76e79;
+      border-bottom-right-radius: 8px;
     }
 
     .footer {
       text-align: center;
-      margin-top: 50px;
+      margin-top: 20px;
       font-style: italic;
-      font-size: 16px;
+      font-size: 12px;
       color: #6b4e4d;
     }
 
     @media print {
+      body {
+        background: white;
+        margin: 0;
+        padding: 0;
+        width: 210mm;
+        height: 297mm;
+      }
+
+      .container {
+        box-shadow: none;
+        margin: 0;
+        padding: 10mm;
+        border: none;
+        width: 190mm;
+        height: 277mm;
+      }
+
       .rsvp-button {
         background-color: #b76e79 !important;
         color: white !important;
         -webkit-print-color-adjust: exact;
         print-color-adjust: exact;
       }
-
-      body {
-        background: white;
-      }
-
-      .container {
-        box-shadow: none;
-        margin: 0;
-        padding: 20px;
-      }
     }
 
     @media (max-width: 600px) {
       .container {
-        margin: 20px;
-        padding: 25px;
+        margin: 5mm;
+        padding: 5mm;
+        height: auto;
       }
 
       .names {
-        font-size: 46px;
+        font-size: 36px;
       }
 
       .and {
-        font-size: 30px;
+        font-size: 24px;
       }
 
       .subtitle {
-        font-size: 18px;
+        font-size: 14px;
       }
 
       .section h2 {
-        font-size: 32px;
+        font-size: 24px;
       }
 
       .details {
-        font-size: 18px;
+        font-size: 12px;
       }
 
       .couple-image {
-        max-width: 300px;
+        max-width: 100mm;
+      }
+
+      .cultural-image {
+        max-width: 60mm;
       }
 
       .date-banner {
-        font-size: 16px;
+        font-size: 14px;
         max-width: 100%;
       }
 
       .corner-decoration {
-        width: 60px;
-        height: 60px;
+        width: 50px;
+        height: 50px;
+      }
+
+      .image-container {
+        flex-direction: column;
+        align-items: center;
       }
     }
   </style>
@@ -388,9 +432,9 @@
       <div class="subtitle">Together with their families request the honor of your presence as they begin their new life together</div>
     </div>
 
-    <!-- Placeholder couple image -->
-    <div style="text-align: center;">
-      <img src="/api/placeholder/400/300" class="couple-image" alt="Chandan and Anjali">
+    <div class="image-container">
+      <img src="https://via.placeholder.com/200x150?text=Ganesha+Cartoon" class="cultural-image" alt="Ganesha Cartoon">
+      <img src="https://via.placeholder.com/200x150?text=Marriage+Cartoon" class="cultural-image" alt="Boys and Girls Marriage Cartoon">
     </div>
 
     <div class="floral-divider">
