--- a/resume1607.html
+++ b/resume1607.html
@@ -426,7 +426,7 @@
               <li><strong>Data Science:</strong> Generative AI, LLMs, RAG, Prompt Engineering, NLP, Transformers, Text Analytics, Sentiment Analysis, Named Entity Recognition (NER), Machine Learning, Deep Learning, Time Series Analysis, Reinforcement Learning, Computer Vision, CNNs, OpenCV, Statistical Modeling, Hypothesis Testing.</li>
               <li><strong>Programming & Frameworks:</strong> Python, R, SQL, TensorFlow, PyTorch, Scikit-learn, Keras, LangChain, LangGraph, CrewAI, Hugging Face, LlamaIndex, FastAPI, Flask, Django, RESTful API Development, GraphQL, Pandas, NumPy, SciPy, StatsModels, Streamlit, Bash, Shell Scripting</li>
               <li><strong>Cloud Platforms & Databases:</strong> AWS (Bedrock, SageMaker, Redshift, Athena, S3, EC2, Lambda, EMR, Glue), Azure (Synapse, Databricks, ML Studio), GCP (BigQuery, Vertex AI, Dataflow), Snowflake, PostgreSQL, MySQL, MongoDB, Pinecone, Chroma, Milvus, ETL Pipelines.</li>
-              <li><strong>Data Visualization & BI Tools:</strong> Tableau, Power BI, Matplotlib, Seaborn, Plotly,</li>
+              <li><strong>Data Visualization:</strong> Tableau, Power BI, Matplotlib, Seaborn</li>
               <li><strong>Tools, DevOps & Version Control:</strong> Git, GitHub, GitLab, Bitbucket, Docker, Kubernetes, CI/CD for ML Pipelines.</li>
               <li><strong>Analytics & Business Skills:</strong> Data Wrangling, Feature Engineering, EDA, User Segmentation, Business Intelligence, Product Analytics, Forecasting.</li>
             </ul>
