--- a/wife_resume.html
+++ b/wife_resume.html
@@ -292,7 +292,7 @@
     <header>
       <div class="profile-section">
         <div class="profile-image">
-          <img src="anjali.jpg" alt="Anjali Rani" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+          <img src="Anjali.jpg" alt="Anjali Rani" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
           <div class="profile-image-fallback">Image Not Available</div>
         </div>
         <div class="profile-details">
