--- a/wife_resume.html
+++ b/wife_resume.html
@@ -411,7 +411,7 @@
             <li><strong>Cloud & Databases:</strong> AWS (Bedrock, SageMaker, Redshift, Athena, S3, EC2, Lambda, EMR, Glue), Azure (Synapse, Databricks, ML Studio), GCP (BigQuery, Vertex AI, Dataflow), Snowflake, PostgreSQL, MySQL, MongoDB, Pinecone, Chroma, Milvus, ETL Pipelines</li>
             <li><strong>Visualization & BI Tools:</strong> Tableau, Power BI, Matplotlib, Seaborn, Plotly</li>
             <li><strong>Tools, DevOps & Version Control:</strong> Git, GitHub, GitLab, Bitbucket, Docker, Kubernetes, CI/CD for ML Pipelines</li>
-            <li><strong>Analytics & Business Skills:</strong> Data Wrangling, Feature Engineering, Exploratory Data Analysis (EDA), Cohort Analysis, Funnel Analysis, Retention Analysis, User Segmentation, Business Intelligence, Product Analytics, Forecasting, Data Governance, Problem-Solving, Critical Thinking, System Integration, Workflow Automation</li>
+            <li><strong>Analytics & Business Skills:</strong> Data Wrangling, Feature Engineering, Exploratory Data Analysis (EDA), Cohort Analysis, Retention Analysis, User Segmentation, Business Intelligence, Product Analytics, Forecasting, Data Governance, Problem-Solving, Critical Thinking, System Integration, Workflow Automation</li>
           </ul>
         </div>
       </div>
