--- a/wife_resume.html
+++ b/wife_resume.html
@@ -391,7 +391,7 @@
           </ul>
         </div>
         <div class="project">
-          <div class="project-title"><strong>Waste Classification</strong>, <span class="company-name">TCS</span></div>
+          <div class="project-title"><strong>Waste Classification Code</strong>, <span class="company-name">TCS</span></div>
           <ul>
             <li>Designed comprehensive deep learning-based waste classification system using convolutional neural networks and transfer learning, achieving 95%+ accuracy across multiple waste categories for environmental sustainability applications.</li>
             <li>Created scalable ML pipeline architecture for real-time waste sorting, incorporating edge computing deployment, IoT sensor integration, and automated feedback mechanisms for continuous model improvement.</li>
